:recycle: fix web-app URL

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 </ul>
                             </div>
                             <div class="navbar-btn d-none d-sm-inline-block">
-                                <a class="main-btn" target="_blank" href="http://face-mask-detection">Try It Now</a>
+                                <a class="main-btn" target="_blank" href="http://face-mask-detection.com">Try It Now</a>
                             </div>
                             
                             
@@ -122,7 +122,7 @@
                                 What is the problem? Datasets?
                             </p>
                             <div class="pricing-btn pt-70">
-                                <a class="main-btn main-btn-2" target="_blank" href="http://face-mask-detection">Try It Now</a>
+                                <a class="main-btn main-btn-2" target="_blank" href="http://face-mask-detection.com">Try It Now</a>
                             </div>
                         </div> 
                     </div>
