:recycle: update the website design

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                             <br><br>
                                             <h3 style="text-align: center;">c) Face mask detection: ResNet-18 vs. ResNet-34 vs. VGG16 vs. VGG19</h3>
                                             <br>
-                                            <img src="img/resnetvcg.png" class="center" width="80%"/>
+                                            <img src="img/resnetvgg.png" class="center" width="80%"/>
                                             <br><br>
                                             <table>
                                                 <tr>
