:recycle: fix style

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <table>
                             <tr>
                                 <td width="33.3%">
-                                    <ol style="text-align: left;">
+                                    <ol style="text-align: left; vertical-align: top;">
                                         <li>
                                             <b>First Phase: Face detection</b>
                                             <p>
@@ -172,7 +172,7 @@
                                 </td>
                                 <td width="33.3%">
                     
-                                    <ol style="text-align: left;">
+                                    <ol style="text-align: left; vertical-align: top;">
                                         <li>
                                             <b>Second Phase: Face mask detection</b>
                                             <p>
@@ -185,7 +185,7 @@
                                     </ol>
                                 </td>
                                 <td width="33.3%">
-                                    <ol style="text-align: left;">
+                                    <ol style="text-align: left; vertical-align: top;">
                                         <li>
                                             <b>Final Phase: Face mask properly worn</b>
                                             <p>
