:recycle: fix style

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                         <br><br>
                         <table>
                             <tr>
-                                <td width="33.3%">
-                                    <ol style="text-align: left; vertical-align: top;">
+                                <td width="33.3%" style="vertical-align: top;">
+                                    <ol style="text-align: left;">
                                         <li>
                                             <b>First Phase: Face detection</b>
                                             <p>
@@ -170,8 +170,8 @@
                                         </li>
                                     </ol>
                                 </td>
-                                <td width="33.3%">
-                                    <ol style="text-align: left; vertical-align: top;">
+                                <td width="33.3%" style="vertical-align: top;">
+                                    <ol style="text-align: left;">
                                         <li>
                                             <b>Second Phase: Face mask detection</b>
                                             <p>
@@ -183,8 +183,8 @@
                                         </li>
                                     </ol>
                                 </td>
-                                <td width="33.3%">
-                                    <ol style="text-align: left; vertical-align: top;">
+                                <td width="33.3%" style="vertical-align: top;">
+                                    <ol style="text-align: left;">
                                         <li>
                                             <b>Final Phase: Face mask properly worn</b>
                                             <p>
