:recycle: fix style

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <table>
                             <tr>
                                 <td width="33.3%" style="vertical-align: top;">
-                                    <ol style="text-align: left;">
+                                    <ol style="text-align: left; margin-right: 20px">
                                         <li>
                                             <b>First Phase: Face detection</b>
                                             <p>
@@ -171,7 +171,7 @@
                                     </ol>
                                 </td>
                                 <td width="33.3%" style="vertical-align: top;">
-                                    <ol style="text-align: left;">
+                                    <ol style="text-align: left; margin-right: 20px">
                                         <li>
                                             <b>Second Phase: Face mask detection</b>
                                             <p>
@@ -184,7 +184,7 @@
                                     </ol>
                                 </td>
                                 <td width="33.3%" style="vertical-align: top;">
-                                    <ol style="text-align: left;">
+                                    <ol style="text-align: left; margin-right: 20px">
                                         <li>
                                             <b>Final Phase: Face mask properly worn</b>
                                             <p>
