:recycle: add github repo link

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                                     <li class="nav-item">
                                         <a href="#contact">Our Team</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a href="https://github.com/hide27k/face-mask-detection">GitHub</a>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="navbar-btn d-none d-sm-inline-block">
