:recycle: add github repo link

--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
                                         <div class="our-services-content mt-45">
                                             <h1 class="services-title">Experiments & Results</span></h1>
                                             <br><br>
+                                            <div style="text-align: center;">
                                                 <p>All source code used in this experiment is in the experiment folder in the <a href="https://github.com/hide27k/face-mask-detection">"face-mask-detection"</a> repository on the GitHub</p>
+                                            </div>
                                             <br><br>
                                             <h3 style="text-align: center;">a) Face detection: Haar Cascade vs. MTCNN</h3>
                                             <img src="img/ppl.png" class="center" width="80%"/>
