:recycle: add github repo link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         <a href="#contact">Our Team</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="https://github.com/hide27k/face-mask-detection">GitHub</a>
+                                        <a href="https://github.com/hide27k/face-mask-detection" target="_blank">GitHub</a>
                                     </li>
                                 </ul>
                             </div>
