:recycle: add github repo link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             </div>
                             
                             
-                        </nav> <!-- navbar -->
+                        </nav>
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
