--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                             <h1 class="services-title">Experiments & Results</span></h1>
                                             <br><br>
                                             <div style="text-align: center;">
-                                                <p>All source code used in this experiment is in the experiment folder in the <a href="https://github.com/hide27k/face-mask-detection">"face-mask-detection"</a> repository on the GitHub</p>
+                                                <p>All source code used in this experiment can be found in the <a href="https://github.com/hide27k/face-mask-detection">experiment folder</a> in the <a href="https://github.com/hide27k/face-mask-detection">"face-mask-detection"</a> repository on the GitHub</p>
                                             </div>
                                             <br><br>
                                             <h3 style="text-align: center;">a) Face detection: Haar Cascade vs. MTCNN</h3>
