:recycle: fix type

--- a/index.html
+++ b/index.html
@@ -241,22 +241,22 @@
                                             <table>
                                                 <tr>
                                                     <td width="50%">
-                                                        <h4>ResNet18: Avg. accuracy is 99.49596774193547 %</h4>
+                                                        <h4>ResNet18: Avg. accuracy is 99.496 %</h4>
                                                         <img src="img/test_acc_resnet18.png" class="center" width="80%"/>
                                                     </td>
                                                     <td width="50%">
-                                                        <h4>ResNet34: Avg. accuracy is 99.8991935483871 %</h4>
+                                                        <h4>ResNet34: Avg. accuracy is 99.899 %</h4>
                                                         <img src="img/test_acc_resnet34.png" class="center" width="80%"/>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td width="50%">
-                                                        <h4>VGG16: Avg. accuracy is 99.79838709677418 %</h4>
-                                                        <img src="img/test_acc_vcg16.png" class="center" width="80%"/>
+                                                        <h4>VGG16: Avg. accuracy is 99.798 %</h4>
+                                                        <img src="img/test_acc_vgg16.png" class="center" width="80%"/>
                                                     </td>
                                                     <td width="50%">
                                                         <h4>VGG19: Avg. accuracy is 100%</h4>
-                                                        <img src="img/test_acc_vcg19.png" class="center" width="80%"/>
+                                                        <img src="img/test_acc_vgg19.png" class="center" width="80%"/>
                                                     </td>
                                                 </tr>
                                             </table>
