:recycle: fix size

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                             <br>
                                             <img src="img/resnetvgg.png" class="center" width="80%"/>
                                             <br><br>
-                                            <table>
+                                            <table style="width:100%">
                                                 <tr>
                                                     <td width="50%">
                                                         <h4>ResNet18: Avg. accuracy is 99.496 %</h4>
