:recycle: add references

--- a/index.html
+++ b/index.html
@@ -408,8 +408,35 @@
                     </div> 
                 </div>
             </div> 
-            <div class="row grid">         
-            </div> 
+            <h4 class="title">Datasets</h4>
+            <br>
+                <ul>
+                    <li><a href="https://www.kaggle.com/ashishjangra27/face-mask-12k-images-dataset" target="_blank">face-mask-12k-images-dataset</a>: this dataset consists of almost 12K images and is used to train our models (ResNet18, ResNet34, VGG16, and VGG19).</li>
+                    <li><a href="https://www.kaggle.com/niharika41298/withwithout-mask" target="_blank">With/Without Mask</a>: this dataset consists of almost 1K images and is used to train our first ResNet50.</li>
+                </ul>
+            <br>
+            <h4 class="title">Source code</h4>
+            <br>
+                <ul>
+                    <li><a href="https://github.com/hide27k/face-mask-detection" target="_blank">face-mask-detection</a>: this repository contains source codes for the website, the face mask detector app, and Google Colab used in experiments.</li>
+                </ul>
+            <br>
+            <h4 class="title">Models</h4>
+            <br>
+                <ul>
+                    <li><a href="https://github.com/timesler/facenet-pytorch" target="_blank">Face Recognition Using PyTorch</a>: this repository contains MTCNN model which we used to detect faces on a photo.</li>
+                    <li><a href="https://pytorch.org/vision/stable/models.html">TORCHVISION.MODELS</a>: this document contains how to call pre-trained VGG16/19 and ResNet18/34 models from TorchVision module.</li>
+                    <li><a href="https://github.com/opencv/opencv_contrib/tree/1311b057475664b6af118fd1a405888bad4fd839/modules/face/data/cascades">Repository for OpenCV's extra modules</a>: this repository contains the Haar-Cascade model in XML file that we used it to detect someone's nose in a photo.</li>
+                    <li><a href="https://arxiv.org/abs/1512.03385">Deep Residual Learning for Image Recognition</a>the research paper introducing ResNet</li>
+                    <li><a href="https://arxiv.org/abs/1409.1556">Very Deep Convolutional Networks for Large-Scale Image Recognition</a>: the research paper introducing VGG</li>
+                </ul>
+            <br>
+            <h4 class="title">Others</h4>
+            <br>
+                <ul>
+                    <li><a href="https://eudl.eu/pdf/10.4108/eai.8-1-2021.167843">An Efficient Face Mask Detector with PyTorch and Deep Learning</a>: this research paper inspired us to use ResNet in the first experiment.</li>
+                </ul>
+            <br>
         </div> 
     </section>
 
