:recycle: add references

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         </div> 
     </section>
 
-    <section id="portfolio" class="project-masonry-area pt-115">
+    <section id="references" class="project-masonry-area pt-115">
         <div class="container">
             <div class="row align-items-end">
                 <div class="col-lg-4">
